--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,3 +1,7 @@
-<div id='container'>
+<div id='container' ng-controller='LinksController'>
   <!-- Your html here -->
+  <ul>
+    <li ng-repeat='link in data'>  {{ link }}  </li>
+  </ul>
+
 </div>
