Basic app completed

--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,5 +1,6 @@
 <div id='container' ng-controller='LinksController'>
   <!-- Your html here -->
+  <a href='#/shorten'> Shorten a Link</a>
   <ul>
     <li ng-repeat='link in data'>  {{ link }}  </li>
   </ul>
