--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,5 +1,11 @@
-<div id='container'>
+<div id='container' ng-controller='ShortenController'>
 <!-- Your code here -->
+<a href='#/links'> View Links</a>
+  <h1>Submit Link</h1>
+    <form name="linkForm" ng-submit='addLink()'>
+      <input type='text' ng-model='link.url'>
+      <button>Shorten</button>
+    </form>
 
 </div>
 
