--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -3,10 +3,13 @@
 <a href='#/links'> View Links</a>
   <h1>Submit Link</h1>
     <form name="linkForm" ng-submit='addLink()'>
-      <input type='text' ng-model='link.url'>
+      <input type='text' name ='url' ng-model='link.url'>
       <button>Shorten</button>
     </form>
 
+  <div ng-messages="linkForm.url.$error" style="color:maroon" role="alert">
+    <div ng-show='{{bool}}' ng-message="required">Enter valid Url</div>
+  </div>
 </div>
 
 
