--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -8,7 +8,7 @@
     </form>
 
   <div ng-messages="linkForm.url.$error" style="color:maroon" role="alert">
-    <div ng-show='{{bool}}' ng-message="required">Enter valid Url</div>
+    <div ng-show='bool' ng-message="required">Enter valid Url</div>
   </div>
 </div>
 
