--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -2,7 +2,14 @@
   <!-- Your html here -->
   <a href='#/shorten'> Shorten a Link</a>
   <ul>
-    <li ng-repeat='link in data.links' ng-click=''><h3>{{link.title}}</h3><a ng-href='/api/links/{{link.code}}'>{{link.base_url+'/'+link.code}}</a></li>
+    <li class='link' ng-repeat='link in data.links' ng-click=''>
+      <div class='info'>
+        <div class='visits'><span class='count'>{{link.visits}}</span>Visits</div>
+        <div class='title'>{{link.title}}</div>
+        <div class='original'>{{link.url}}</div>
+        <a ng-href='{{link.base_url}}/api/links/{{link.code}}'>{{link.base_url}}/{{link.code}}</a>
+      </div>
+    </li>
   </ul>
 
 </div>
