--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,8 +1,9 @@
 <div id='container' ng-controller='LinksController'>
   <!-- Your html here -->
   <a href='#/shorten'> Shorten a Link</a>
+  <input type="text" ng-model="search" placeholder="Enter title">
   <ul>
-    <li class='link' ng-repeat='link in data.links' ng-click=''>
+    <li class='link' ng-repeat='link in data.links | filter:search' ng-click=''>
       <div class='info'>
         <div class='visits'><span class='count'>{{link.visits}}</span>Visits</div>
         <div class='title'>{{link.title}}</div>
